<resources>
    <string name="app_name">Notes Application</string>

    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_note">Add Note</string>
    <string name="note_text">Note Text</string>
    <string name="id">Id (Auto Generated)</string>
    <string name="list_of_all_notes">List of all notes</string>
    <string name="notes_content">Notes Content</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_empty_note">Please type something in the note</string>
    <string name="note_added">Note Successfully Added</string>
    <string name="error">Error: %1$s</string>
</resources>